# k8s-cluster

./: README.md  prompt.txt  renovate.json
cluster/apps/ai/librechat/: deployment.yaml  externalsecret.yaml  kustomization.yaml  librechat-pvc.yaml  librechat-yaml-configmap.yaml  meilisearch-pvc.yaml  meilisearch-statefulset.yaml  mongodb-pvc.yaml  mongodb-statefulset.yaml  rag-api-deployment.yaml  serviceaccount.yaml  vpa.yaml
cluster/apps/ai/llama-backend/: README.md  kustomization.yaml  linkerd-policy.yaml  litellm-configmap.yaml  litellm-deployment.yaml  llama-static-a-configmap.yaml  llama-static-a-deployment.yaml  llama-static-b-configmap.yaml  llama-static-b-deployment.yaml  llama-swap-configmap.yaml  llama-swap-deployment.yaml  model-cache-migration-job.yaml  (+3 more)
cluster/bootstrap/: kubeadm-config.yaml
cluster/bootstrap/argocd/: kustomization.yaml  patch-argocd-cm-homepage-account.yaml  patch-argocd-rbac-cm-homepage.yaml
cluster/bootstrap/cilium/: README.md
cluster/bootstrap/kube-vip/: README.md  kube-vip.yaml
docs/: apps.md  dgx-spark-arm-migration-report.md  emergency-dump-runbook.md  media-workload-rebalance-pause.md  opensearch-app-replicated-storage-audit.md  qbittorrent-cephfs-canary-report.md  qbittorrent-lts-consolidation.md  vault-operations.md  workload-placement-plan.md
docs/updates/: 2025Q4.md  2026Q1.md
scripts/: emergency-cluster-dump.conf.example  emergency-cluster-dump.sh  export-emergency-secrets.py  seed-observability-prereqs.sh  vaultwarden-accounts.tsv.example
tools/qbittorrent-merge-history/: CMakeLists.txt  README.md  main.cpp
(+303 files in other folders)
